added contact-us page

--- a/about-us.html
+++ b/about-us.html
@@ -136,7 +136,7 @@
           <li><a href="/about-us" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700 decoration-green-700 underline underline-offset-[0.425rem]">About Us</a></li>
           <li class="flex flex-wrap gap-4">
             <a href="https://labresult.metroviganhospital.com/" target="_blank" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
-            <a href="index.html#contact" class="lg:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
+            <a href="/contact-us" class="lg:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -617,7 +617,7 @@
           <li><a href="/about-us" class="hover:text-green-600 transition">About Us</a></li>
           <li><a href="/careers" class="hover:text-green-600 transition">Careers</a></li>
           <li><a href="https://labresult.metroviganhospital.com/" target="_blank" class="hover:text-[#04813b] transition">Lab Results</a></li>
-          <li><a href="index.html#contact" class="hover:text-[#04813b] transition">Contact Us</a></li>          
+          <li><a href="/contact-us" class="hover:text-[#04813b] transition">Contact Us</a></li>          
         </ul>
       </div>
 
