--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">About Us</a></li>
           <li class="flex flex-wrap gap-4">
             <a href="https://labresult.metroviganhospital.com/" target="_blank" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
-            <a href="#contact" class="lg:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
+            <a href="/contact-us" class="lg:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -1093,7 +1093,7 @@
           </p>
           <div class="rounded-xl overflow-hidden shadow-lg border border-gray-200">
             <iframe 
-              src="https://www.google.com/maps?q=Rizal+St.,+Brgy.+IV+(Poblacion),+Bantay,+Philippines&output=embed"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3803.4626952544268!2d120.38184747894374!3d17.580750040382462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x338e650bc9b81acf%3A0x5dac6d7d69b033d0!2sMetro%20Vigan%20Hospital!5e0!3m2!1sen!2sus!4v1755444176507!5m2!1sen!2sus"
               width="100%" height="400" style="border:0;" allowfullscreen="yes" loading="lazy" title="MVH Address">
             </iframe>
           </div>
@@ -1221,7 +1221,7 @@
           <li><a href="/about-us" class="hover:text-[#04813b] transition">About Us</a></li>
           <li><a href="/careers" class="hover:text-[#04813b] transition">Careers</a></li>
           <li><a href="https://labresult.metroviganhospital.com/" target="_blank" class="hover:text-[#04813b] transition">Lab Results</a></li>
-          <li><a href="index.html#contact" class="hover:text-[#04813b] transition">Contact Us</a></li>
+          <li><a href="/contact-us" class="hover:text-[#04813b] transition">Contact Us</a></li>
         </ul>
       </div>
 
