--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Title & Description -->
-  <title>Privacy Policy - Metro Vigan Hospital</title>
+  <title>Privacy Policy | Metro Vigan Hospital</title>
 
   <!-- Author -->
   <meta name="author" content="Metro Vigan Hospital">
