--- a/contact-us.html
+++ b/contact-us.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Title & Description -->
-  <title>Contact Us - Metro Vigan Hospital</title>
+  <title>Contact Us | Metro Vigan Hospital</title>
 
   <!-- Author -->
   <meta name="author" content="Metro Vigan Hospital">
