--- a/about-us.html
+++ b/about-us.html
@@ -422,7 +422,7 @@
     <div class="max-w-7xl mx-auto px-6 md:px-12">
 
       <!-- Bottom: HMO Accredited Partners -->
-      <div data-aos="fade-up" data-aos-delay="100">
+      <div id="hmo" data-aos="fade-up" data-aos-delay="100">
         <h3 class="text-3xl font-semibold text-center text-[#04813b] mb-10">Accreditations <span class="text-gray-800">&</span> Certifications</h3>
         
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mb-10">
