--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
   <section class="py-16 bg-gray-50" id="services">
     <div class="w-full mx-auto px-12 md:px-12 text-center">
       <!-- Section Title -->
-      <h2 class="text-3xl md:text-4xl font-bold text-gray-800" data-aos="fade-up">
+      <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-10" data-aos="fade-up">
         Our <span class="text-[#04813b]">Services</span>
       </h2>
-      <p class="text-gray-600 mt-3 max-w-2xl mx-auto" data-aos="fade-up" data-aos-delay="100">
+      <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12" data-aos="fade-up" data-aos-delay="100">
         We provide comprehensive medical care and specialized services to meet the healthcare needs of our community.
       </p>
 
@@ -558,10 +558,10 @@
   <section class="py-16 bg-gray-50" id="facilities">
     <div class="max-w-7xl mx-auto px-6 md:px-12 text-center">
       <!-- Section Title -->
-      <h2 class="text-3xl md:text-4xl font-bold text-gray-800" data-aos="fade-up">
+      <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-10" data-aos="fade-up">
         Our <span class="text-[#04813b]">Facilities</span>
       </h2>
-      <p class="text-gray-600 mt-3 max-w-2xl mx-auto" data-aos="fade-up" data-aos-delay="100">
+      <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12" data-aos="fade-up" data-aos-delay="100">
         State-of-the-art medical facilities designed to provide the best care for our patients.
       </p>
 
@@ -628,11 +628,11 @@
   <section class="py-16 bg-white" id="doctors">
     <div class="max-w-7xl mx-auto px-6 md:px-12 text-center">
       <!-- Section Title -->
-      <h2 class="text-3xl md:text-4xl font-bold text-gray-800" data-aos="fade-up">
-        Introducing Our <span class="text-[#04813b]">New Consultants</span>
+      <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-10" data-aos="fade-up">
+        Naimbag nga Isasangbay, <span class="text-[#04813b]">Doctors!</span>
       </h2>
-      <p class="text-gray-600 mt-3 max-w-2xl mx-auto" data-aos="fade-up" data-aos-delay="100">
-        Meet our dedicated team of specialists providing exceptional care.
+      <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12" data-aos="fade-up" data-aos-delay="100">
+        Their expertise will further enhance our services and ensure that you and your loved ones receive the specialized care you deserve, right here at home.
       </p>
       <!-- Doctors Grid -->
       <div class="mt-12 grid gap-8 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
@@ -913,11 +913,11 @@
         
         <!-- Job Card -->
         <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
-          <h3 class="text-xl font-semibold text-green-700">Registered Nurse</h3>
-          <p class="text-gray-600 mt-2 text-sm">Department: Nursing</p>
-          <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
+          <h3 class="text-xl font-semibold text-green-700">Medical Technologist</h3>
+          <p class="text-gray-600 mt-2 text-sm">Department: Laboratory</p>
+          <p class="text-gray-600 text-sm mb-4">Openings: <strong>2</strong></p>
           <p class="mt-4 text-gray-700 text-sm">
-            Provide patient-centered care and assist doctors in treatment and procedures.
+            Join our lab! We're hiring a Registered Medical Technologist. #RMT #MedTechHiring
           </p>
           <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
             class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
@@ -927,11 +927,11 @@
 
         <!-- Another Job -->
         <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
-          <h3 class="text-xl font-semibold text-green-700">Medical Technologist</h3>
-          <p class="text-gray-600 mt-2 text-sm">Department: Laboratory</p>
+          <h3 class="text-xl font-semibold text-green-700">Administrative Assistant</h3>
+          <p class="text-gray-600 mt-2 text-sm">Department: Admin</p>
           <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
           <p class="mt-4 text-gray-700 text-sm">
-            Conduct lab tests accurately and ensure high-quality diagnostic services.
+            We're hiring an Admin Assistant in Metro Vigan Hospital! Apply now! #JobsPH #Vigan
           </p>
           <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
             class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
@@ -943,9 +943,9 @@
         <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
           <h3 class="text-xl font-semibold text-green-700">Pharmacist</h3>
           <p class="text-gray-600 mt-2 text-sm">Department: Pharmacy</p>
-          <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
+          <p class="text-gray-600 text-sm mb-4">Openings: <strong>2</strong></p>
           <p class="mt-4 text-gray-700 text-sm">
-            Dispense medications, counsel patients, and manage pharmacy operations.
+            Hiring: Registered Pharmacist. Join our MVH pharmacy team. Apply now! #RPh #Hiring #ViganCity
           </p>
           <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
             class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
@@ -1125,13 +1125,14 @@
               
               <!-- Phone -->
               <div class="relative ">
-                <label for="phone" class="block text-sm font-medium text-gray-700">Phone Number</label>
+                <label for="phone" class="block text-sm font-medium text-gray-700">Cellphone Number</label>
                 <div class="relative">
                   <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
                     <i class="fas fa-phone"></i>
                   </span>
                   <input type="tel" id="phone" name="phone"
-                        pattern="^(09|\+639)\d{9}$"
+                        pattern="^(09|\+639)\d{9}$" maxlength="15"
+                        placeholder="09 or +639"
                         title="Enter a valid PH number: starts with 09 or +639"
                         required
                         class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
