--- a/services.html
+++ b/services.html
@@ -410,8 +410,8 @@
       </div>
 
       <!-- Note -->
-      <p class="mt-8 text-sm text-gray-500">
-        *We accept other accredited HMOs. Please contact us for the complete list.
+      <p class="mt-8 text-md text-gray-500">
+        *We partner with a wide range of accredited HMOs. To see our full list of providers, click <a href="/about-us#hmo" class="text-gray-500 hover:text-green-500 hover:underline hover:underline-offset-2">learn more→</a>.
       </p>
     </div>
   </section>
